Fixed bug #34786 (2 @ results in change to error_reporting() to random value)