Zend/zend_vm_def.h
@@ -3581,9 +3581,9 @@ ZEND_VM_HANDLER(57, ZEND_BEGIN_SILENCE, ANY, ANY)
 {
 	zend_op *opline = EX(opline);
 	
+	EX_T(opline->result.u.var).tmp_var.value.lval = EG(error_reporting);
+	EX_T(opline->result.u.var).tmp_var.type = IS_LONG;  /* shouldn't be necessary */
 	if (EX(old_error_reporting) == NULL) {
-		EX_T(opline->result.u.var).tmp_var.value.lval = EG(error_reporting);
-		EX_T(opline->result.u.var).tmp_var.type = IS_LONG;  /* shouldn't be necessary */
 		EX(old_error_reporting) = &EX_T(opline->result.u.var).tmp_var;
 	}
 	
